cmake_minimum_required(VERSION 3.1)

#include directory, same for all build types
include_directories(include)

#file GLOB matches files and stores them in the specified variable, in this case, SOURCES
#get main file for build
file(GLOB SOURCES "main.c")

#add global sources
file(GLOB GLB_SRC "src/*.c")
list(APPEND SOURCES ${GLB_SRC})

#include sources that are platform specific
if(PSX STREQUAL "y")
        message(STATUS "PSX BUILD")
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin_psx)
        file(GLOB PSX_SRC "src/psx/*.c")
        list(APPEND SOURCES PSX_SRC)
        add_executable(movsqr.exe ${SOURCES})
elseif(WIN32 OR MINGW OR MSYS OR CYGWIN OR MSVC)
        message(STATUS "WINDOWS BUILD")
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin_win)
        file(GLOB WIN_SRC "src/win/*.c")
        list(APPEND SOURCES WIN_SRC)
        add_executable(movsqr.exe ${SOURCES})
elseif(APPLE OR WATCOM OR BORLAND)
        message(FATAL_ERROR "CAN NOT BUILD FOR APPLE, WATCOM, BORLAND")
elseif(UNIX)
        message(STATUS "LINUX BUILD")
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin_nix)
        file(GLOB NIX_SRC "src/nix/*.c")
        list(APPEND SOURCES ${NIX_SRC})
        add_executable(movsqr ${SOURCES})
else()
        message(FATAL_ERROR "NO BUILD TARGET MATCH")
endif()

#linking
if(PSX STREQUAL "y")
        message(STATUS "LINKING PSX LIBS")
else()
        message(STATUS "LINKING OPENGL, GLFW, GLEW LIBS")
        find_package(glfw3 3.2 REQUIRED)
        find_package(GLEW 1.10 REQUIRED)
        find_package(OpenGL REQUIRED)
        if(OPENGL_FOUND AND GLEW_FOUND AND GLFW3_FOUND)
                if(UNIX)
                        message(STATUS "LINKING FOR LINUX")
                        target_link_libraries(movsqr ${OPENGL_LIBRARY} ${GLFW3_STATIC_LIBRARIES} GLEW)
                else()
                        message(STATUS "LINKING FOR WINDOWS")
                        target_link_libraries(movsqr.exe ${OPENGL_LIBRARY} ${GLFW_STATIC_LIBRARIES} GLEW)
                endif()
        else()
                if(NOT OPENGL_FOUND)
                        message(FATAL_ERROR "NO OPENGL FOUND")
                endif()
                
                if(NOT GLEW_FOUND)
                        message(FATAL_ERROR "NO GLEW FOUND")
                endif()
                
                if(NOT GLFW3_FOUND)
                        message(FATAL_ERROR "NO GLFW3 FOUND")
                endif()
        endif()
endif()
